--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,8 @@
     background-image: url("Images/intro-bg.jpg");
     background-size: cover;
     background-position: center;
+    background-repeat: repeat;
+    background-size: 20vw 20vw; 
     z-index: -1;
 }
 
